feat: JPA 도입